--- a/signup-page/index.html
+++ b/signup-page/index.html
@@ -7,25 +7,91 @@
     <title>Sign Up</title>
   </head>
   <body>
-    <main>
-      <div>For Individuals</div>
-      <div>
-        <form action="">
-          <label for="first-name">First Name</label>
-          <input
-            type="text"
-            name="first-name"
-            id="first-name"
-            placeholder="First Name"
-          />
-          <label for="last-name">Last Name</label>
-          <input
-            type="text"
-            name="last-name"
-            id="last-name"
-            placeholder="Last Name"
-          />
-
+    <main class="container">
+      <div class="inner-container">
+        <img class="logo-img" src="logo.png" alt="Main logo" />
+        <h2>For Individuals</h2>
+        <p>
+          Start benefiting from the wellness experience. For companies looking
+          on increasing productivity, and improving organization wellness.
+        </p>
+      </div>
+      <div class="inner-container">
+        <form class="form" action="">
+          <div class="input-group">
+            <label for="first-name">First Name</label>
+            <input
+              type="text"
+              name="first-name"
+              id="first-name"
+              placeholder="First Name"
+            />
+          </div>
+          <div class="input-group">
+            <label for="last-name">Last Name</label>
+            <input
+              type="text"
+              name="last-name"
+              id="last-name"
+              placeholder="Last Name"
+            />
+          </div>
+          <div class="input-group">
+            <label for="gender">Gender</label>
+            <input
+              type="text"
+              name="last-name"
+              id="last-name"
+              placeholder="Last Name"
+            />
+          </div>
+          <div class="input-group">
+            <label for="gender">Gender</label>
+            <select name="gender" id="gender">
+              <option value="">Select here</option>
+              <option value="male">Male</option>
+              <option value="female">Female</option>
+            </select>
+          </div>
+          <div class="input-group">
+            <label for="date-of-birth">Date of Birth</label>
+            <input type="date" name="date-of-birth" id="date-of-birth" />
+          </div>
+          <div class="input-group">
+            <label for="weight">Weight (KG)</label>
+            <input
+              type="text"
+              name="weight"
+              id="weight"
+              placeholder="Enter Weight"
+            />
+          </div>
+          <div class="input-group">
+            <label for="height">Height (CM)</label>
+            <input
+              type="text"
+              name="height"
+              id="height"
+              placeholder="Enter height here"
+            />
+          </div>
+          <div class="input-group">
+            <label for="activity-level">Activity Level</label>
+            <select name="activity-level" id="activity-level">
+              <option value="">Select here</option>
+              <option value="Level-one">Level One</option>
+              <option value="level-two">Level Two</option>
+            </select>
+          </div>
+          <div class="input-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="Password"
+            />
+          </div>
           <button type="submit">Register</button>
         </form>
       </div>
