--- a/signup-page/index.html
+++ b/signup-page/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link type="text/css" rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="image/png" href="logo.png" />
     <title>Sign Up</title>
   </head>
   <body>
