--- a/signup-page/index.html
+++ b/signup-page/index.html
@@ -27,21 +27,11 @@
         <form class="form" action="#">
           <div class="input-group">
             <label for="first-name">First Name</label>
-            <input
-              type="text"
-              name="first-name"
-              id="first-name"
-              placeholder="First Name"
-            />
+            <input type="text" name="first-name" id="first-name" />
           </div>
           <div class="input-group">
             <label for="last-name">Last Name</label>
-            <input
-              type="text"
-              name="last-name"
-              id="last-name"
-              placeholder="Last Name"
-            />
+            <input type="text" name="last-name" id="last-name" />
           </div>
           <div class="input-group">
             <label for="gender">Gender</label>
@@ -83,12 +73,7 @@
           </div>
           <div class="input-group no-wrap">
             <label for="password">Password</label>
-            <input
-              type="password"
-              name="password"
-              id="password"
-              placeholder="Password"
-            />
+            <input type="password" name="password" id="password" />
           </div>
           <button type="submit">Register</button>
 
