--- a/wp-pusher/index.html
+++ b/wp-pusher/index.html
@@ -29,104 +29,110 @@
     </nav>
 
     <main class="container">
-      <div class="inner-container checkout-container">
+      <div class="checkout-container">
         <h2 class="px-40">Checkout</h2>
         <form action="">
           <div class="ruler"></div>
-          <div class="sub-heading px-40">
-            <svg
-              width="30"
-              height="30"
-              viewBox="0 0 32 32"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M19.6394 19.52V21H13.2394V19.52H15.5834V12.776C15.5834 12.5093 15.5914 12.2347 15.6074 11.952L13.9434 13.344C13.8474 13.4187 13.7514 13.4667 13.6554 13.488C13.5647 13.504 13.4767 13.504 13.3914 13.488C13.3114 13.472 13.2394 13.4453 13.1754 13.408C13.1114 13.3653 13.0634 13.32 13.0314 13.272L12.4074 12.416L15.9354 9.416H17.5594V19.52H19.6394Z"
-                fill="#548BC5"
-              />
-              <circle
-                cx="16"
-                cy="16"
-                r="15"
-                stroke="#548BC5"
-                stroke-width="2"
-              />
-            </svg>
+          <div class="w-100 my-20 px-40">
+            <div class="sub-heading gap-10">
+              <svg
+                width="30"
+                height="30"
+                viewBox="0 0 32 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M19.6394 19.52V21H13.2394V19.52H15.5834V12.776C15.5834 12.5093 15.5914 12.2347 15.6074 11.952L13.9434 13.344C13.8474 13.4187 13.7514 13.4667 13.6554 13.488C13.5647 13.504 13.4767 13.504 13.3914 13.488C13.3114 13.472 13.2394 13.4453 13.1754 13.408C13.1114 13.3653 13.0634 13.32 13.0314 13.272L12.4074 12.416L15.9354 9.416H17.5594V19.52H19.6394Z"
+                  fill="#548BC5"
+                />
+                <circle
+                  cx="16"
+                  cy="16"
+                  r="15"
+                  stroke="#548BC5"
+                  stroke-width="2"
+                />
+              </svg>
 
-            <h4 class="">Your Basic Information</h4>
-          </div>
-          <div class="input-group" style="padding-left: 40px">
-            <label for="first-name">First Name</label>
-            <input
-              type="text"
-              name="first-name"
-              id="first-name"
-              placeholder="John"
-            />
-          </div>
-          <div class="input-group" style="padding-right: 40px">
-            <label for="last-name">Last Name</label>
-            <input
-              type="text"
-              name="last-name"
-              id="last-name"
-              placeholder="Doe"
-            />
-          </div>
-          <div class="input-group no-wrap px-40">
-            <label for="email">Email</label>
-            <input
-              type="email"
-              name="email"
-              id="email"
-              placeholder="johndoe@example.com"
-            />
+              <h4 class="">Your Basic Information</h4>
+            </div>
+            <div class="flex gap-10">
+              <div class="input-group">
+                <label for="first-name">First Name</label>
+                <input
+                  type="text"
+                  name="first-name"
+                  id="first-name"
+                  placeholder="John"
+                />
+              </div>
+              <div class="input-group">
+                <label for="last-name">Last Name</label>
+                <input
+                  type="text"
+                  name="last-name"
+                  id="last-name"
+                  placeholder="Doe"
+                />
+              </div>
+            </div>
+            <div class="input-group no-wrap">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="johndoe@example.com"
+              />
+            </div>
           </div>
           <div class="ruler"></div>
-          <div class="sub-heading px-40">
-            <svg
-              width="32"
-              height="32"
-              viewBox="0 0 32 32"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M19.2074 19.16C19.4207 19.16 19.5887 19.2213 19.7114 19.344C19.8394 19.4613 19.9034 19.6187 19.9034 19.816V21H11.9674V20.344C11.9674 20.2107 11.994 20.072 12.0474 19.928C12.106 19.7787 12.1967 19.6453 12.3194 19.528L15.8314 16.008C16.1247 15.7093 16.386 15.424 16.6154 15.152C16.85 14.88 17.0447 14.6107 17.1994 14.344C17.354 14.0773 17.4714 13.808 17.5514 13.536C17.6367 13.2587 17.6794 12.968 17.6794 12.664C17.6794 12.3867 17.6394 12.144 17.5594 11.936C17.4794 11.7227 17.3647 11.544 17.2154 11.4C17.0714 11.256 16.8954 11.1493 16.6874 11.08C16.4847 11.0053 16.2554 10.968 15.9994 10.968C15.7647 10.968 15.546 11.0027 15.3434 11.072C15.146 11.136 14.97 11.2293 14.8154 11.352C14.6607 11.4693 14.53 11.608 14.4234 11.768C14.3167 11.928 14.2367 12.104 14.1834 12.296C14.0927 12.5413 13.9754 12.704 13.8314 12.784C13.6874 12.864 13.4794 12.8827 13.2074 12.84L12.1674 12.656C12.2474 12.1013 12.402 11.616 12.6314 11.2C12.8607 10.7787 13.146 10.4293 13.4874 10.152C13.834 9.86933 14.2287 9.65867 14.6714 9.52C15.1194 9.376 15.5994 9.304 16.1114 9.304C16.6447 9.304 17.1327 9.384 17.5754 9.544C18.018 9.69867 18.3967 9.92 18.7114 10.208C19.026 10.496 19.2714 10.8427 19.4474 11.248C19.6234 11.6533 19.7114 12.104 19.7114 12.6C19.7114 13.0267 19.6474 13.4213 19.5194 13.784C19.3967 14.1467 19.2287 14.4933 19.0154 14.824C18.8074 15.1547 18.562 15.4747 18.2794 15.784C17.9967 16.0933 17.7007 16.408 17.3914 16.728L14.7834 19.392C15.034 19.3173 15.282 19.2613 15.5274 19.224C15.778 19.1813 16.0154 19.16 16.2394 19.16H19.2074Z"
-                fill="#548BC5"
-              />
-              <circle
-                cx="16"
-                cy="16"
-                r="15"
-                stroke="#548BC5"
-                stroke-width="2"
-              />
-            </svg>
-            <h4>Your Payment Information</h4>
-          </div>
+          <div class="w-100 my-20 px-40">
+            <div class="sub-heading gap-10">
+              <svg
+                width="32"
+                height="32"
+                viewBox="0 0 32 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M19.2074 19.16C19.4207 19.16 19.5887 19.2213 19.7114 19.344C19.8394 19.4613 19.9034 19.6187 19.9034 19.816V21H11.9674V20.344C11.9674 20.2107 11.994 20.072 12.0474 19.928C12.106 19.7787 12.1967 19.6453 12.3194 19.528L15.8314 16.008C16.1247 15.7093 16.386 15.424 16.6154 15.152C16.85 14.88 17.0447 14.6107 17.1994 14.344C17.354 14.0773 17.4714 13.808 17.5514 13.536C17.6367 13.2587 17.6794 12.968 17.6794 12.664C17.6794 12.3867 17.6394 12.144 17.5594 11.936C17.4794 11.7227 17.3647 11.544 17.2154 11.4C17.0714 11.256 16.8954 11.1493 16.6874 11.08C16.4847 11.0053 16.2554 10.968 15.9994 10.968C15.7647 10.968 15.546 11.0027 15.3434 11.072C15.146 11.136 14.97 11.2293 14.8154 11.352C14.6607 11.4693 14.53 11.608 14.4234 11.768C14.3167 11.928 14.2367 12.104 14.1834 12.296C14.0927 12.5413 13.9754 12.704 13.8314 12.784C13.6874 12.864 13.4794 12.8827 13.2074 12.84L12.1674 12.656C12.2474 12.1013 12.402 11.616 12.6314 11.2C12.8607 10.7787 13.146 10.4293 13.4874 10.152C13.834 9.86933 14.2287 9.65867 14.6714 9.52C15.1194 9.376 15.5994 9.304 16.1114 9.304C16.6447 9.304 17.1327 9.384 17.5754 9.544C18.018 9.69867 18.3967 9.92 18.7114 10.208C19.026 10.496 19.2714 10.8427 19.4474 11.248C19.6234 11.6533 19.7114 12.104 19.7114 12.6C19.7114 13.0267 19.6474 13.4213 19.5194 13.784C19.3967 14.1467 19.2287 14.4933 19.0154 14.824C18.8074 15.1547 18.562 15.4747 18.2794 15.784C17.9967 16.0933 17.7007 16.408 17.3914 16.728L14.7834 19.392C15.034 19.3173 15.282 19.2613 15.5274 19.224C15.778 19.1813 16.0154 19.16 16.2394 19.16H19.2074Z"
+                  fill="#548BC5"
+                />
+                <circle
+                  cx="16"
+                  cy="16"
+                  r="15"
+                  stroke="#548BC5"
+                  stroke-width="2"
+                />
+              </svg>
+              <h4>Your Payment Information</h4>
+            </div>
 
-          <div class="input-group no-wrap px-40">
-            <label for="credit-card-number">Credit Card</label>
-            <div class="credit-card">
-              <input
-                type="text"
-                name="credit-card-number"
-                id="credit-card-number"
-                placeholder="Card Number"
-              />
-              <input
-                type="text"
-                name="expiration-date"
-                id="expiration-date"
-                placeholder="MM/YY"
-              />
-              <input type="text" name="cvc" id="cvc" placeholder="CVC" />
+            <div class="input-group no-wrap">
+              <label for="credit-card-number">Credit Card</label>
+              <div class="credit-card">
+                <input
+                  type="text"
+                  name="credit-card-number"
+                  id="credit-card-number"
+                  placeholder="Card Number"
+                />
+                <input
+                  type="text"
+                  name="expiration-date"
+                  id="expiration-date"
+                  placeholder="MM/YY"
+                />
+                <input type="text" name="cvc" id="cvc" placeholder="CVC" />
+              </div>
             </div>
           </div>
           <button type="submit">Buy WP Pusher</button>
-          <div class="form-footer-info">
+          <div class="form-footer-info gap-10">
             <p>
               <svg
                 width="20"
@@ -144,7 +150,8 @@
               </svg>
 
               <span>Need any help?</span> Don't hesistate to
-              <a href="#">contact support!</a>
+              <a href="#">contact </a><br />
+              support!
             </p>
             <svg
               width="92"
@@ -229,7 +236,7 @@
         </div>
         <div>
           <p>
-            Need &nbsp;<strong>20</strong>&nbsp; client sites?
+            Need &nbsp;<strong>20</strong>&nbsp; client sites? <br />
             <a href="#" class="bold">Switch to the Agency plan</a>
           </p>
         </div>
