Add ruler and update CSS styles

--- a/wp-pusher/index.html
+++ b/wp-pusher/index.html
@@ -129,6 +129,7 @@
               />
             </div>
           </div>
+          <div class="ruler"></div>
           <button type="submit">Buy WP Pusher</button>
           <div class="form-footer-info gap-10">
             <p>
