Add About Me link to index.html and Sign up link to profile.html

--- a/basic-html/index.html
+++ b/basic-html/index.html
@@ -10,6 +10,7 @@
       <a href="#">
         <img src="assets/images/altschool-logo.png" alt="AltSchool" />
       </a>
+      <a href="./profile.html">About Me</a>
     </header>
     <main>
       <h1>Application Form</h1>
