--- a/basic-html/profile.html
+++ b/basic-html/profile.html
@@ -10,92 +10,46 @@
       <a href="#">
         <img src="assets/images/altschool-logo.png" alt="AltSchool" />
       </a>
+      <a href="./index.html">Sign up</a>
     </header>
     <main>
       <h1>Liasu Aanuoluwapo Olabayo</h1>
-      <p></p>
-      <form>
-        <div>
-          <label for="firstname">First Name</label>
-          <input
-            type="text"
-            id="firstname"
-            name="firstname"
-            placeholder="Enter first name"
-            required
-          />
-        </div>
-        <div>
-          <label for="lastname">Last Name</label>
-          <input
-            type="text"
-            id="lastname"
-            name="lastname"
-            placeholder="Enter last name"
-          />
-        </div>
-        <div>
-          <label for="gender">Gender</label>
-          <select name="gender" id="gender">
-            <option value="" selected disabled></option>
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-          </select>
-        </div>
-        <div>
-          <label for="date">Date of Birth</label>
-          <input type="date" id="date" name="date" />
-        </div>
-        <div>
-          <label for="email">Email Address</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Enter email address"
-          />
-        </div>
-        <div>
-          <label for="country">Country</label>
-          <select name="country" id="country">
-            <option value="" selected disabled></option>
-            <option value="au">Australia</option>
-            <option value="ca">Canada</option>
-            <option value="gh">Ghana</option>
-            <option value="ke">Kenya</option>
-            <option value="ng">Nigeria</option>
-            <option value="uk">United Kingdom</option>
-            <option value="us">United States</option>
-          </select>
-        </div>
-        <div>
-          <label for="state">State/City of Residence</label>
-          <input
-            type="text"
-            id="state"
-            name="state"
-            placeholder="Enter your state of residence"
-          />
-        </div>
-        <div>
-          <label for="employment">Employment Status</label>
-          <input type="text" id="employment" name="employment" />
-        </div>
-        <div>
-          <label for="phone">Phone Number</label>
-          <input type="tel" id="phone" name="phone" placeholder="08154387000" />
-        </div>
+      <img
+        src="assets/images/olajosh-image.jpg"
+        width="400px"
+        alt="Liasu Aanuoluwapo's picture"
+      />
+      <h4>ALT/SOE/023/2759</h4>
+      <p>
+        Hello! My name is Liasu Aanuoluwapo Olabayo, an aspiring software
+        engineer eager to make my mark in the tech world. With a deep interest
+        in backend engineering, I am committed to honing my skills and staying
+        abreast of the latest developments in the field.
+      </p>
 
-        <p>
-          By clicking continue, I agree to <a href="#">Terms of Use</a> and
-          acknowledge that I have read the <a href="#">Privacy Policy.</a>
-        </p>
+      <h2>Reasons for Joining AltSchool:</h2>
 
-        <div>
-          <button type="submit">Proceed</button>
-        </div>
-        Already have an account? <a href="#">Sign in</a>
-      </form>
+      <p>
+        My decision to join AltSchool is influenced by its distinctive
+        educational structure and teaching methodologies. AltSchool's commitment
+        to personalized learning and innovative approaches resonates with my
+        vision for a comprehensive and effective educational experience. The
+        emphasis on real-world project development is particularly appealing, as
+        it aligns perfectly with my goal to gain practical, hands-on experience
+        in my field of study.
+      </p>
+
+      <h2>What I Plan to Achieve with AltSchool:</h2>
+      <p>
+        Enrolling in the Backend Engineering Track at AltSchool, my objective is
+        to acquire a comprehensive understanding of backend development and
+        programming. I aim to leverage this knowledge to not only succeed in the
+        software engineering industry but also contribute meaningfully to the
+        tech community. AltSchool's commitment to fostering creativity and
+        critical thinking aligns perfectly with my goals, and I'm excited to
+        embark on this educational journey to achieve success in my chosen
+        field.
+      </p>
     </main>
   </body>
 </html>
